--- a/repo/index.html
+++ b/repo/index.html
@@ -35,10 +35,10 @@
         <kbd>
           1
         </kbd>
-        apps. To add it to your F-Droid client, scan the QR code (click it to enlarge) or use this URL:
+        apps. To add it to your F-Droid app, scan the QR code (click it to enlarge) or use this link:
       </p>
       <p class="center" style="margin-top:.5em">
-        <a href="https://ilingu.github.io/fdroid/repo?fingerprint=B5C0C825BBB9C03A8119169CD997D003F472EA5B7EBA19E180CDEE0D798A1725">
+        <a href="https://fdroid.link/#https://ilingu.github.io/fdroid/repo?fingerprint=B5C0C825BBB9C03A8119169CD997D003F472EA5B7EBA19E180CDEE0D798A1725">
           <code style="color:#000000;font-weight:bold;">
             https://ilingu.github.io/fdroid/repo
           </code>
